<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqml_plugin_example</name>
  <version>3.26.42</version>
  <description>An example plugin for RQml</description>
  <!-- Replace with your email and name -->
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT-0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rqml_core</depend>
  <exec_depend>qml6-module-qtquick-controls</exec_depend>
  <exec_depend>qml6-module-qtquick-layouts</exec_depend>
  <exec_depend>qml6_ros2_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
