<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqml</name>
  <version>3.26.42</version>
  <description>QML-based robotics visualization and control tool for ROS 2.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>GPL-3.0-only</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rqml_core</exec_depend>
  <exec_depend>rqml_default_plugins</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
