<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqml_default_plugins</name>
  <version>3.26.40</version>
  <description>Default plugins for the QML-based robotics visualization and control tool RQml for ROS 2.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>GPL-3.0-only</license>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rqml_core</depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>pal_statistics_msgs</exec_depend>
  <exec_depend>qml6-module-qt-labs-qmlmodels</exec_depend>
  <exec_depend>qml6-module-qtmultimedia</exec_depend>
  <exec_depend>qml6-module-qtquick-controls</exec_depend>
  <exec_depend>qml6-module-qtquick-dialogs</exec_depend>
  <exec_depend>qml6-module-qtquick-layouts</exec_depend>
  <exec_depend>qml6_ros2_plugin</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>qml6_ros2_plugin</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>ros_babel_fish_test_msgs</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
